# Image_Generation_Service

./: Dockerfile  Editing Img_Gen_Service_README.md at main · eclipse-tech_Img_Gen_Service.html  Makefile  README.md  docker-buildx.yaml  requirements.txt  setup.cfg  setup.py
diffuzers/: gradio_app.py  img2img.py  lightning_app.py  pyproject.toml  setup.py  text2img.py  x2image.py
diffuzers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
diffuzers/Image_Generation_Service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diffuzers/api/: main.py  schemas.py
